# Pydya

./: .gitignore  README.md  pyproject.toml  setup.py
benchmarks/: _stats.py  bench_linear_relu.py  bench_madd.py  bench_parallel.py  bench_tensor_ops.py  bench_unroll.py  digit_inference_benchmark.py  feature_breakdown_benchmark.py  fusion_benchmark.py  inference_benchmark.py  parallel_benchmark.py  tensor_benchmark.py
docs/: PERF.md
examples/: _kernel.py  decorator_example.py  digit_inference.py  digit_weights.json  fusion_example.py  import_example.py  parallel_example.py  readme_example.py  tensor_example.py  unroll_example.py  xor_inference.py
pydya/: __init__.py  _tensor.c  attr.py  compiler.py  compilevar.py  importer.py  module.py  runtime.py  specialize.py
pydya/passes/: __init__.py  branch.py  collect.py  dce.py  fold.py  fuse_tensors.py  inline.py  parallelize.py  unroll.py
tests/: test_branch.py  test_collect.py  test_dce.py  test_digit_inference.py  test_e2e.py  test_fold.py  test_fuse_tensors.py  test_importer.py  test_inline.py  test_parallelize.py  test_scaffold.py  test_specialize.py  test_tensor.py  test_unroll.py
tools/: train_digits.py
